2005-07-25  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am, configure.ac: Remove BUNDLED_{LUA,SQLITE} tests and
	clarify the comment for popt.  Using external versions of these
	tools didn't work anyway, so there's no point giving the
	impression that it might.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (gasp): Handle the possibility of multiple valid calls
	to gasp(), 'db check' can trigger multiple invariants without
	dying.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (sanity::already_dumping, gasp): Don't let gasp
	be called recursively, in case a dump triggers an invariant.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (gasp): Make more robust against new errors triggered
	during error unwind.  (write_change_set in particular likes to
	blow up when handling in invalid change_set.)

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (merge_change_sets, check_sane)
	(concatenate_change_sets, invert_change_set): Add M()s.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (dump): Remove templated version, add std::string
	version.
	* vocab.{hh,cc} (dump): Add ATOMIC/DECORATE/ENCODING dumpers.
	* change_set.{hh,cc} (dump): Add change_set dumper.
	* manifest.{hh,cc} (dump): Add manifest_map dumper.
	* revision.cc (check_sane_history): Add some M()s.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (class Musing, gasp, dump): Actually, take a
	std::string instead of a std::ostream; fits our idioms better.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (log, progress, warning): Append '\n' to strings when
	necessary.
	(gasp): Save string properly.
	(M): Apply black magic.  Now works correctly.
	(dump): Write newline.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (dump): Add a default 'dump' implementation for all
	<<able objects.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* constants.{cc,hh} (default_terminal_width): New constant.