@@ -282,13 +282,17 @@ sanity::gasp()
 
 MusingI::MusingI()
 {
-  global_sanity.musings.push_back(this);
+  if (!global_sanity.already_dumping)
+    global_sanity.musings.push_back(this);
 }
 
 MusingI::~MusingI()
 {
-  I(global_sanity.musings.back() == this);
-  global_sanity.musings.pop_back();
+  if (!global_sanity.already_dumping)
+    {
+      I(global_sanity.musings.back() == this);
+      global_sanity.musings.pop_back();
+    }
 }
 
 void
