@@ -1,3 +1,8 @@
+2005-07-24  Nathaniel Smith  <njs@pobox.com>
+
+	* sanity.cc (MusingI, ~MusingI): No-op when already in the middle
+	of dumping.
+
 2005-07-25  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* Makefile.am, configure.ac: Remove BUNDLED_{LUA,SQLITE} tests and
